<resources>
    <string name="app_name">Gitstars</string>
    <string name="slogan">/**\n * gitStars\n * 我们的征途是星辰大海\n */</string>
    <string name="jump">跳过</string>
    <string name="action_settings">Menu</string>
    <string name="openString">openString</string>
    <string name="closeString">closeString</string>

    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="close">close</string>

    <string name="project">项目</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>

    <string name="no_sign">未登录</string>
    <string name="sign_in">sign in</string>
    <string name="sign_desc">请使用github账号登录\n来导入你的star项目</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
