<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light"
    android:gravity="right"
    android:id="@+id/ll_setting"
    android:orientation="vertical"
    android:paddingTop="40dp">

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/close"
        android:textColor="@color/text_gray_s_dark"
        android:textSize="@dimen/textSize_l" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="admin"
            android:textColor="@color/text_gray_s_dark"
            android:textSize="@dimen/textSize_l" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/text_gray_m_dark"
            android:textSize="@dimen/textSize_l" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/text_gray_m_dark"
            android:textSize="@dimen/textSize_l" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/text_gray_m_dark"
            android:textSize="@dimen/textSize_l" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/project"
            android:textColor="@color/text_gray_s_dark"
            android:textSize="@dimen/textSize_s" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fans"
            android:textColor="@color/text_gray_s_dark"
            android:textSize="@dimen/textSize_s" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/attention"
            android:textColor="@color/text_gray_s_dark"
            android:textSize="@dimen/textSize_s" />
    </LinearLayout>
</LinearLayout>
